Started on Racer

--- a/DerbyManagement.App/DerbyManagement.App.csproj
+++ b/DerbyManagement.App/DerbyManagement.App.csproj
@@ -72,12 +72,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converter\DivisionListToStringConverter.cs" />
     <Compile Include="Converter\DoNothingConverter.cs" />
     <Compile Include="Extensions\EnumBindingSourceExtension.cs" />
+    <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="Services\DerbyDataService.cs" />
     <Compile Include="Services\IDerbyDataService.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\DerbyViewModel.cs" />
+    <Compile Include="ViewModels\RacerViewModel.cs" />
     <Compile Include="Views\DerbyView.xaml.cs">
       <DependentUpon>DerbyView.xaml</DependentUpon>
     </Compile>
