--- a/DerbyManagement.Model/DerbyManagement.Model.csproj
+++ b/DerbyManagement.Model/DerbyManagement.Model.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Enums\ScoringType.cs" />
     <Compile Include="Heat.cs" />
     <Compile Include="Interfaces\IModificationHistory.cs" />
+    <Compile Include="ModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racer.cs" />
     <Compile Include="Run.cs" />
