--- a/DerbyManagement.App/DerbyManagement.App.csproj
+++ b/DerbyManagement.App/DerbyManagement.App.csproj
@@ -73,6 +73,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converter\DivisionListToStringConverter.cs" />
+    <Compile Include="Converter\DivisionToBooleanConverter.cs" />
     <Compile Include="Converter\DoNothingConverter.cs" />
     <Compile Include="Extensions\EnumBindingSourceExtension.cs" />
     <Compile Include="Extensions\ListExtensions.cs" />
