model object unit tests

--- a/DerbyManagement.DAL/DerbyManagement.DAL.csproj
+++ b/DerbyManagement.DAL/DerbyManagement.DAL.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201703241441423_DivisionNameRequired.Designer.cs">
       <DependentUpon>201703241441423_DivisionNameRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703261909054_DerbyNameRequired.cs" />
+    <Compile Include="Migrations\201703261909054_DerbyNameRequired.Designer.cs">
+      <DependentUpon>201703261909054_DerbyNameRequired.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -99,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703241441423_DivisionNameRequired.resx">
       <DependentUpon>201703241441423_DivisionNameRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703261909054_DerbyNameRequired.resx">
+      <DependentUpon>201703261909054_DerbyNameRequired.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
